yaml/deployments/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: djangoproject-deployment
  labels:
    app.kubernetes.io/name: djangoproject
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: djangoproject
  template:
    metadata:
      labels:
        app.kubernetes.io/name: djangoproject
    spec:
      containers:
      - name: djangoproject
        image: registry.digitalocean.com/erikregistry/djangoproject:latest
        ports:
        - containerPort: 5000
