yaml/deployments/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: djangoproject-service
spec:
  selector:
    app.kubernetes.io/name: djangoproject
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: 5000
