yaml/deployments/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-djangoproject
  namespace: default
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  rules:
    - host: dev.haltlair.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: djangoproject-service
                port:
                  number: 80
  tls:
  - hosts:
    - dev.haltlair.se
    secretName: letsencrypt-nginx

  ingressClassName: nginx
